# londemo

./: .gitignore  1_🏠_Home.py  Dockerfile  Home.py  README.md  homepage.py  pyproject.toml
.github/workflows/: main.londemo-image-build-and-push.yml
.streamlit/: config.toml
data/: Dummy_Data.xlsx  data.py  data_helpers.py  dummy_data.py  dummy_data.xlsx
modules/: control_helpers.py  data_helpers.py  helper.py  style_helpers.py
pages/: 2_📊_Demographics.py  3_🔍_Quality.py  4_📩_Contact us.py  Demographics.py
static/: 1_home.css  2_demographics.css  3_quality.css  base.css  contact_us.css  demographics.css  home.css  stylesheets.css
