[project]
name = "londemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.13"
dependencies = [
    "langchain-openai>=0.3.11",
    "matplotlib>=3.9.4",
    "numpy==1.26.2",
    "openpyxl==3.1.5",
    "pandas==2.0.1",
    "plotly>=6.0.1",
    "streamlit>=1.43.2",
    "streamlit-analytics2>=0.8.2",
]
